# opengl

./: .gitignore  CMakeLists.txt
include/: triangle.hpp  utils.hpp
include/exercises/: all.hpp  exercise.hpp  square.hpp  triangle.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: exercise.cpp  main.cpp  triangle.cpp  utils.cpp
src/exercises/: exercise.cpp  square.cpp  triangle.cpp
